--- a/index.html
+++ b/index.html
@@ -60,5 +60,6 @@
 <body class="bg-gray-100">
     <div id="root"></div>
     <script src="https://unpkg.com/html-to-image@1.11.11/dist/html-to-image.js"></script>
+    <script type="module" src="index.tsx"></script>
 </body>
 </html>
